# reveal

./: .gitignore  README.md  components.json  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  version.json  vite.config.ts
src/: App.svelte  main.ts  reveal.svelte  styles.css  styles.pcss
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: analytics.rs  api.rs  app_state.rs  champ_select.rs  commands.rs  config.rs  lcu.rs  lobby.rs  logging.rs  main.rs  region.rs  state.rs  summoner.rs  utils.rs
src/components/: footer.svelte  label.svelte  navbar.svelte  reveal-count.svelte  switch.svelte  tool.svelte  updater.svelte
src/components/button/: button.svelte  index.ts
src/components/toggle/: index.ts  toggle.svelte
src/lib/: champ_select.ts  config.ts  constants.ts  link_actions.ts  lobby_history.ts  logging.ts  preview.ts  runtime.ts  state.ts  updater.ts  utils.ts
src/lib/components/: champ-select-panel.svelte  footer.svelte  history-panel.svelte  navbar.svelte  reveal-count.svelte  settings-panel.svelte  tool.svelte
src/lib/components/ui/button/: button.svelte
