[package]
name = "reveal"
version = "0.1.0"
description = "Reveals your team mates on LoL."
authors = ["steele"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = ["shell-open"] }
tokio = { version = "1.34.0", features = ["macros", "rt", "rt-multi-thread"] }
shaco = { git = "https://github.com/steele123/Shaco" }
futures-util = "0.3.29"
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
colored = "2.0.0"
open = "5.0.0"
urlencoding = "2.1.3"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
